# impact-scan

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HIGH_VOLUME_SCANNING.md  INSTALL.md  LAUNCH_STRATEGY.md  MANIFEST.in  MARKETING_STRATEGY.md  PRE_LAUNCH_FIXES.md  README.md  SECURITY.md  TUI_FINAL_VERSION.md  TUI_FIXED_FINAL.md  TUI_MODERNIZATION_SUMMARY.md  ULTRA_MODERN_TUI.md  VERIFY_IMPLEMENTATION.txt  WEB_INTELLIGENCE_AUDIT_REPORT.md  build_exe.py  debug_scan.py  demo_oss_intelligence.py  docker-compose.yml  dvpwa-report.html  final_so_report.html  install.ps1  install.sh  performance_test.py  pyproject.toml  quick_audit.py  setup.py  simple_demo.py  test-auth.py  test-scan.js  test-scan.py  (+9 more)
.claude/agents/: project-health-auditor.md
.github/workflows/: build-binaries.yml  ci.yml  impact-scan.yml
demo_vulnerable_app/: app.py  requirements.txt  vulnerable_web_app.py
examples/vuln_flask_app/: app.py
local_rules/: nextjs.yml
src/impact_scan/: __init__.py  cli.py  synthesizer.py  web_ui.py
src/impact_scan/agents/: __init__.py  agent_utils.py  base.py  compliance.py  dependency_agent.py  exploit.py  factory.py  fix.py  orchestrator.py  quality.py  recon.py  review.py  static_analysis_agent.py  vuln.py
src/impact_scan/core/: _LEGACY_MODULES.md  aggregator.py  ai_flow_analyzer.py  ai_security_auditor.py  ai_validator.py  ast_scanner.py  auto_fixer.py  comprehensive_security_crawler.py  dep_audit.py  entrypoint.py  fix_ai.py  groq_repo_analyzer.py  groq_system_prompt.py  html_generator.py  html_report.py  knowledge_graph.py  markdown_report.py  modern_web_intelligence.py  parsebot_client.py  project_classifier.py  renderer.py  repo_analyzer.py  repo_graph_integration.py  ripgrep_scanner.py  sarif_report.py  semantic_analyzer.py  stackoverflow_scraper.py  static_scan.py  stealth_crawler.py  unified_dependency_scanner.py  vulnerability_knowledge_base.py  web_search.py
src/impact_scan/core/scanners/: __init__.py  javascript_scanner.py  python_scanner.py
src/impact_scan/github_app/: README.md  __init__.py  comment_formatter.py  github_client.py  queue_manager.py  scanner_worker.py  tier_manager.py  webhook_handler.py
src/impact_scan/rules/: api-security.yml  authentication-security.yml  jwt.yml  nextjs.yml  oauth-security-extended.yml  oauth-security.yml  python-security.yml  secrets-detection.yml
src/impact_scan/templates/: github_action_autofix.yml  github_action_template.yml
src/impact_scan/tools/: __init__.py  ai_fix_generator_tool.py  ai_validator_tool.py  ripgrep_tool.py  stackoverflow_tool.py
src/impact_scan/tui/: __init__.py  app.css  app.py  clean_modern_tui.py  config.py  modern_app.py  modern_app_complete.py  modern_hybrid_app.py  onboarding.py  theme.py  ultra_modern_app.py
src/impact_scan/tui/screens/: __init__.py  api_keys.py  finding_detail.py  path_browser.py
src/impact_scan/tui/state/: __init__.py  app_state.py
src/impact_scan/tui/widgets/: __init__.py  codebase_explorer.py  config_panel.py  export_panel.py  findings_explorer.py  history_panel.py  messages.py  overview_panel.py  progress_panel.py  reports_panel.py  rich_findings_table.py  rich_metrics_panel.py
src/impact_scan/ui/: __init__.py  ascii_art.py  knowledge_graph_viz.py  live_status.py  progress.py  spinners.py  tree_viz.py  welcome.py
src/impact_scan/utils/: api_key_manager.py  auto_installer.py  common.py  config_file.py  constants.py  http_client.py  logging_config.py  lru_cache.py  paths.py  persistent_cache.py  profiles.py  rate_limiter.py  schema.py
test_dir/: flask_app.py  requirements.txt  test_single_vuln.py
test_vuln_dir/: test_vulnerable_app.py
tests/: test_aggregator.py  test_dependency_integration.py  test_e2e_tool_based_scanning.py  test_entrypoint.py  test_hexa_oauth_vulns.py  test_modern_web_intelligence.py  test_rate_limiter.py  test_real_cve.py  test_static_scan_vulnerable.py
tests/data/sanitized_app/pages/: index.tsx
tests/data/vulnerable_flask_app/: app.py  impact-scan.md  impact-scan.yml
tests/data/vulnerable_next_app/pages/: index.tsx
tests/tui/: __init__.py  test_app.py  test_config.py  test_screens.py  test_theme.py
