[project]
name = "impact-scan"
version = "0.1.0"
description = ""
authors = [
    {name = "Anirudh",email = "anirudh.ashrith2005@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pathspec (>=0.12.1,<0.13.0)",
    "openai (>=1.93.1,<2.0.0)",
    "anthropic (>=0.57.1,<0.58.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "sarif-om (>=1.0.4,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "llama-cpp-python (>=0.3.12,<0.4.0)",
    "typer (>=0.16.0,<0.17.0)",
    "flask (>=3.1.1,<4.0.0)",
    "bandit (>=1.8.6,<2.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = "src"

[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.14.1"

[project.scripts]
impact-scan = "impact_scan.cli:app"
